add UV wind preprocess levels to output xarray

--- a/analysis/windrose_scatter.ipynb
+++ b/analysis/windrose_scatter.ipynb
@@ -10,7 +10,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "ERROR 1: PROJ: proj_create_from_database: Open of /cw3e/mead/projects/cwp140/scratch/dnash/miniconda3/envs/SEAK-clim/share/proj failed\n"
+      "ERROR 1: PROJ: proj_create_from_database: Open of /home/dnash/miniconda3/envs/SEAK-clim/share/proj failed\n"
      ]
     }
    ],
@@ -95,6 +95,333 @@
     "ivt_clim['month'] = ivt_clim.index.values - 1\n",
     "ivt_melt = pd.melt(ivt_clim, id_vars='month')\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "ee78c0ed-81eb-4100-a361-dec320b7b3fd",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Hoonah</th>\n",
+       "      <th>Skagway</th>\n",
+       "      <th>Klukwan</th>\n",
+       "      <th>Yakutat</th>\n",
+       "      <th>Craig</th>\n",
+       "      <th>Kasaan</th>\n",
+       "      <th>month</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>month</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>8.07</td>\n",
+       "      <td>8.96</td>\n",
+       "      <td>7.25</td>\n",
+       "      <td>13.17</td>\n",
+       "      <td>8.40</td>\n",
+       "      <td>8.56</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>6.72</td>\n",
+       "      <td>8.30</td>\n",
+       "      <td>6.05</td>\n",
+       "      <td>11.79</td>\n",
+       "      <td>6.89</td>\n",
+       "      <td>7.29</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>6.18</td>\n",
+       "      <td>7.04</td>\n",
+       "      <td>5.25</td>\n",
+       "      <td>10.17</td>\n",
+       "      <td>6.55</td>\n",
+       "      <td>7.28</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>5.10</td>\n",
+       "      <td>5.51</td>\n",
+       "      <td>3.90</td>\n",
+       "      <td>9.07</td>\n",
+       "      <td>6.43</td>\n",
+       "      <td>7.05</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>5.10</td>\n",
+       "      <td>5.14</td>\n",
+       "      <td>3.63</td>\n",
+       "      <td>10.08</td>\n",
+       "      <td>5.06</td>\n",
+       "      <td>5.51</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>4.66</td>\n",
+       "      <td>3.76</td>\n",
+       "      <td>2.86</td>\n",
+       "      <td>6.90</td>\n",
+       "      <td>4.47</td>\n",
+       "      <td>5.12</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>5.94</td>\n",
+       "      <td>3.94</td>\n",
+       "      <td>3.00</td>\n",
+       "      <td>9.91</td>\n",
+       "      <td>4.59</td>\n",
+       "      <td>5.02</td>\n",
+       "      <td>6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>6.88</td>\n",
+       "      <td>6.03</td>\n",
+       "      <td>4.53</td>\n",
+       "      <td>15.66</td>\n",
+       "      <td>6.13</td>\n",
+       "      <td>6.33</td>\n",
+       "      <td>7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>9.54</td>\n",
+       "      <td>9.44</td>\n",
+       "      <td>6.85</td>\n",
+       "      <td>17.29</td>\n",
+       "      <td>8.47</td>\n",
+       "      <td>7.44</td>\n",
+       "      <td>8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>9.98</td>\n",
+       "      <td>10.16</td>\n",
+       "      <td>7.81</td>\n",
+       "      <td>16.87</td>\n",
+       "      <td>8.90</td>\n",
+       "      <td>8.91</td>\n",
+       "      <td>9</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>8.32</td>\n",
+       "      <td>8.74</td>\n",
+       "      <td>7.11</td>\n",
+       "      <td>12.90</td>\n",
+       "      <td>8.65</td>\n",
+       "      <td>9.06</td>\n",
+       "      <td>10</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>7.75</td>\n",
+       "      <td>9.32</td>\n",
+       "      <td>7.40</td>\n",
+       "      <td>13.89</td>\n",
+       "      <td>8.42</td>\n",
+       "      <td>8.63</td>\n",
+       "      <td>11</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       Hoonah  Skagway  Klukwan  Yakutat  Craig  Kasaan  month\n",
+       "month                                                         \n",
+       "1        8.07     8.96     7.25    13.17   8.40    8.56      0\n",
+       "2        6.72     8.30     6.05    11.79   6.89    7.29      1\n",
+       "3        6.18     7.04     5.25    10.17   6.55    7.28      2\n",
+       "4        5.10     5.51     3.90     9.07   6.43    7.05      3\n",
+       "5        5.10     5.14     3.63    10.08   5.06    5.51      4\n",
+       "6        4.66     3.76     2.86     6.90   4.47    5.12      5\n",
+       "7        5.94     3.94     3.00     9.91   4.59    5.02      6\n",
+       "8        6.88     6.03     4.53    15.66   6.13    6.33      7\n",
+       "9        9.54     9.44     6.85    17.29   8.47    7.44      8\n",
+       "10       9.98    10.16     7.81    16.87   8.90    8.91      9\n",
+       "11       8.32     8.74     7.11    12.90   8.65    9.06     10\n",
+       "12       7.75     9.32     7.40    13.89   8.42    8.63     11"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "prec_clim"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "029265cd-403a-4a53-a124-026ebf473b42",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>month</th>\n",
+       "      <th>variable</th>\n",
+       "      <th>value</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0</td>\n",
+       "      <td>Hoonah</td>\n",
+       "      <td>8.07</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>Hoonah</td>\n",
+       "      <td>6.72</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2</td>\n",
+       "      <td>Hoonah</td>\n",
+       "      <td>6.18</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>3</td>\n",
+       "      <td>Hoonah</td>\n",
+       "      <td>5.10</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>4</td>\n",
+       "      <td>Hoonah</td>\n",
+       "      <td>5.10</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>67</th>\n",
+       "      <td>7</td>\n",
+       "      <td>Kasaan</td>\n",
+       "      <td>6.33</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>68</th>\n",
+       "      <td>8</td>\n",
+       "      <td>Kasaan</td>\n",
+       "      <td>7.44</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>69</th>\n",
+       "      <td>9</td>\n",
+       "      <td>Kasaan</td>\n",
+       "      <td>8.91</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>70</th>\n",
+       "      <td>10</td>\n",
+       "      <td>Kasaan</td>\n",
+       "      <td>9.06</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>71</th>\n",
+       "      <td>11</td>\n",
+       "      <td>Kasaan</td>\n",
+       "      <td>8.63</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>72 rows × 3 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    month variable  value\n",
+       "0       0   Hoonah   8.07\n",
+       "1       1   Hoonah   6.72\n",
+       "2       2   Hoonah   6.18\n",
+       "3       3   Hoonah   5.10\n",
+       "4       4   Hoonah   5.10\n",
+       "..    ...      ...    ...\n",
+       "67      7   Kasaan   6.33\n",
+       "68      8   Kasaan   7.44\n",
+       "69      9   Kasaan   8.91\n",
+       "70     10   Kasaan   9.06\n",
+       "71     11   Kasaan   8.63\n",
+       "\n",
+       "[72 rows x 3 columns]"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "prec_melt"
    ]
   },
   {
