add comparison of IMERG WRF and station data

--- a/analysis/windrose_elevation-overlay.ipynb
+++ b/analysis/windrose_elevation-overlay.ipynb
@@ -10,7 +10,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "ERROR 1: PROJ: proj_create_from_database: Open of /cw3e/mead/projects/cwp140/scratch/dnash/miniconda3/envs/SEAK-clim/share/proj failed\n"
+      "ERROR 1: PROJ: proj_create_from_database: Open of /home/dnash/miniconda3/envs/SEAK-clim/share/proj failed\n"
      ]
     }
    ],
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 9,
    "id": "2eca5e14-22ce-42c1-bc41-eb4927502c96",
    "metadata": {
     "tags": []
@@ -210,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "7c9d3739-bc78-478a-aedd-9eb4e71ea433",
    "metadata": {},
    "outputs": [],
@@ -227,7 +227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "7fa9e15f-5957-4222-97ba-486598ddcd4d",
    "metadata": {},
    "outputs": [],
@@ -253,7 +253,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "960496cf-8bbf-4c7c-bdb1-36cb39a39c3c",
    "metadata": {},
    "outputs": [],
@@ -278,6 +278,149 @@
     "df_tidy = df_tidy.rename(columns=mapping)\n",
     "df_tidy = df_tidy.drop(['ID'], axis=1)\n",
     "# df_tidy"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "b6c4eb1a-de27-43d7-9a9e-472a8ea2bd52",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Hoonah</th>\n",
+       "      <th>Skagway</th>\n",
+       "      <th>Klukwan</th>\n",
+       "      <th>Yakutat</th>\n",
+       "      <th>Craig</th>\n",
+       "      <th>Kasaan</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>count</th>\n",
+       "      <td>4,903.00</td>\n",
+       "      <td>4,903.00</td>\n",
+       "      <td>4,903.00</td>\n",
+       "      <td>4,903.00</td>\n",
+       "      <td>4,903.00</td>\n",
+       "      <td>4,903.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>mean</th>\n",
+       "      <td>268.79</td>\n",
+       "      <td>163.59</td>\n",
+       "      <td>158.56</td>\n",
+       "      <td>242.44</td>\n",
+       "      <td>346.88</td>\n",
+       "      <td>327.81</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>std</th>\n",
+       "      <td>140.98</td>\n",
+       "      <td>96.29</td>\n",
+       "      <td>93.02</td>\n",
+       "      <td>144.05</td>\n",
+       "      <td>171.34</td>\n",
+       "      <td>162.56</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>min</th>\n",
+       "      <td>16.26</td>\n",
+       "      <td>6.02</td>\n",
+       "      <td>6.11</td>\n",
+       "      <td>8.00</td>\n",
+       "      <td>18.44</td>\n",
+       "      <td>15.69</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25%</th>\n",
+       "      <td>169.10</td>\n",
+       "      <td>94.28</td>\n",
+       "      <td>92.16</td>\n",
+       "      <td>137.35</td>\n",
+       "      <td>224.49</td>\n",
+       "      <td>211.94</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50%</th>\n",
+       "      <td>243.55</td>\n",
+       "      <td>142.64</td>\n",
+       "      <td>139.50</td>\n",
+       "      <td>218.93</td>\n",
+       "      <td>324.87</td>\n",
+       "      <td>307.38</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>75%</th>\n",
+       "      <td>341.75</td>\n",
+       "      <td>207.02</td>\n",
+       "      <td>203.01</td>\n",
+       "      <td>316.90</td>\n",
+       "      <td>444.03</td>\n",
+       "      <td>418.24</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>95%</th>\n",
+       "      <td>535.24</td>\n",
+       "      <td>356.95</td>\n",
+       "      <td>344.51</td>\n",
+       "      <td>518.01</td>\n",
+       "      <td>662.90</td>\n",
+       "      <td>630.29</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>max</th>\n",
+       "      <td>1,029.17</td>\n",
+       "      <td>686.82</td>\n",
+       "      <td>627.57</td>\n",
+       "      <td>1,014.39</td>\n",
+       "      <td>1,216.59</td>\n",
+       "      <td>1,153.40</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        Hoonah  Skagway  Klukwan  Yakutat    Craig   Kasaan\n",
+       "count 4,903.00 4,903.00 4,903.00 4,903.00 4,903.00 4,903.00\n",
+       "mean    268.79   163.59   158.56   242.44   346.88   327.81\n",
+       "std     140.98    96.29    93.02   144.05   171.34   162.56\n",
+       "min      16.26     6.02     6.11     8.00    18.44    15.69\n",
+       "25%     169.10    94.28    92.16   137.35   224.49   211.94\n",
+       "50%     243.55   142.64   139.50   218.93   324.87   307.38\n",
+       "75%     341.75   207.02   203.01   316.90   444.03   418.24\n",
+       "95%     535.24   356.95   344.51   518.01   662.90   630.29\n",
+       "max   1,029.17   686.82   627.57 1,014.39 1,216.59 1,153.40"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.describe(percentiles=[.25, .5, .75, .95])"
    ]
   },
   {
