add figures for CW3E annual meeting presentations

--- a/analysis/statistical_figs.ipynb
+++ b/analysis/statistical_figs.ipynb
@@ -1186,7 +1186,65 @@
    "id": "16f34bf4-87f3-403d-91c6-a63cc87c2f00",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "fname = path_to_figs + 'percentile_bins_klukwan_poster'\n",
+    "fmt = 'png'\n",
+    "\n",
+    "# Start with a square Figure. - then multiple each by the number of rows and columns you want of each full panel\n",
+    "nrows = 1\n",
+    "ncols = 1\n",
+    "\n",
+    "tcklblx_lst = range_labels(perc_lbl)\n",
+    "tcklbly_lst = np.flip(range_labels(perc_lbl))\n",
+    "\n",
+    "xlbl_lst = 'Precipitation'\n",
+    "ylbl_lst = 'IVT'\n",
+    "\n",
+    "sns.set_theme(style=\"ticks\")\n",
+    "\n",
+    "fig = plt.figure(figsize=(1, 1))\n",
+    "# Add a gridspec with two rows and two columns and a ratio of 1 to 4 between\n",
+    "# the size of the marginal axes and the main axes in both directions.\n",
+    "# Also adjust the subplot parameters for a square plot.\n",
+    "gs = fig.add_gridspec(2*nrows, 2*ncols,  width_ratios=[4, 1]*ncols, height_ratios=[1, 4]*nrows,\n",
+    "                      left=0.1, right=0.9, bottom=0.1, top=0.9,\n",
+    "                      wspace=0.05, hspace=0.05)\n",
+    "\n",
+    "\n",
+    "for i, df in enumerate(df_lst):\n",
+    "    # get percentile values\n",
+    "    perc_prec = prec_thres_lst[i]\n",
+    "    perc_ivt = ivt_thres_lst[i]\n",
+    "    # giving each df a column for percentile bins for precip and ivt\n",
+    "    tmp = assign_percentiles(df, prec_thres_lst[i], ivt_thres_lst[i], range_labels(perc_lbl))\n",
+    "    heatmap_vals, extreme_prec_AR, extreme_ivt_AR = community_heatmap_values(tmp, range_labels(perc_lbl))\n",
+    "    print(extreme_prec_AR, extreme_ivt_AR)\n",
+    "    \n",
+    "    # Create the Axes.\n",
+    "    ax = fig.add_subplot(gs[ax_lst[i][0], ax_lst[i][1]])\n",
+    "    ax_histx = fig.add_subplot(gs[axhistx_lst[i][0], axhistx_lst[i][1]], sharex=ax)\n",
+    "    ax_histy = fig.add_subplot(gs[axhisty_lst[i][0], axhisty_lst[i][1]], sharey=ax)\n",
+    "    \n",
+    "    # plot the heatmap and marginal bar charts\n",
+    "    create_heatmap_plot(heatmap_vals, extreme_prec_AR, extreme_ivt_AR, ax, ax_histx, ax_histy, tcklblx_lst[i], tcklbly_lst[i], range_labels(perc_lbl))\n",
+    "    ax.set_xlabel(xlbl_lst[i])\n",
+    "    ax.set_ylabel(ylbl_lst[i])\n",
+    "    \n",
+    "    # plot title\n",
+    "    titlestring = '({0}) {1}'.format(letter_lst[i], community_lst[i])\n",
+    "    ax_histx.text(0.025, 1.27, titlestring, ha='left', va='top', transform=ax.transAxes, fontsize=12., backgroundcolor='white', zorder=101)\n",
+    "    \n",
+    "    ax_histy.invert_yaxis()\n",
+    "    ax.invert_yaxis()\n",
+    "    \n",
+    "# Save the figure\n",
+    "fig.savefig('%s.%s' % (fname, fmt), bbox_inches='tight', dpi=300)\n",
+    "plt.show()\n",
+    "fig.clf()\n",
+    "\n",
+    "plotFile = fname + '.png'\n",
+    "print(plotFile)"
+   ]
   }
  ],
  "metadata": {
