--- a/analysis/statistical_figs.ipynb
+++ b/analysis/statistical_figs.ipynb
@@ -97,6 +97,300 @@
   {
    "cell_type": "code",
    "execution_count": 4,
+   "id": "e918e2ae-dbf3-44dd-8a15-6ad8c2bcd8da",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>time</th>\n",
+       "      <th>IVT</th>\n",
+       "      <th>lat</th>\n",
+       "      <th>lon</th>\n",
+       "      <th>uIVT</th>\n",
+       "      <th>vIVT</th>\n",
+       "      <th>IWV</th>\n",
+       "      <th>ivtdir</th>\n",
+       "      <th>AR</th>\n",
+       "      <th>impact</th>\n",
+       "      <th>prec</th>\n",
+       "      <th>UVdir</th>\n",
+       "      <th>prec_Hoonah</th>\n",
+       "      <th>ivt_Hoonah</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>time</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1980-01-01</th>\n",
+       "      <td>1980-01-01</td>\n",
+       "      <td>148.93</td>\n",
+       "      <td>58.00</td>\n",
+       "      <td>-135.50</td>\n",
+       "      <td>29.62</td>\n",
+       "      <td>148.30</td>\n",
+       "      <td>11.56</td>\n",
+       "      <td>211.02</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>6.35</td>\n",
+       "      <td>16.50</td>\n",
+       "      <td>0.61</td>\n",
+       "      <td>0.58</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1980-01-02</th>\n",
+       "      <td>1980-01-02</td>\n",
+       "      <td>147.08</td>\n",
+       "      <td>58.00</td>\n",
+       "      <td>-135.50</td>\n",
+       "      <td>6.58</td>\n",
+       "      <td>146.94</td>\n",
+       "      <td>11.51</td>\n",
+       "      <td>186.81</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>10.58</td>\n",
+       "      <td>65.70</td>\n",
+       "      <td>0.77</td>\n",
+       "      <td>0.57</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1980-01-03</th>\n",
+       "      <td>1980-01-03</td>\n",
+       "      <td>101.50</td>\n",
+       "      <td>58.00</td>\n",
+       "      <td>-135.50</td>\n",
+       "      <td>26.70</td>\n",
+       "      <td>101.25</td>\n",
+       "      <td>10.91</td>\n",
+       "      <td>257.80</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>20.42</td>\n",
+       "      <td>53.43</td>\n",
+       "      <td>0.93</td>\n",
+       "      <td>0.40</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1980-01-04</th>\n",
+       "      <td>1980-01-04</td>\n",
+       "      <td>29.98</td>\n",
+       "      <td>58.00</td>\n",
+       "      <td>-135.50</td>\n",
+       "      <td>21.53</td>\n",
+       "      <td>3.76</td>\n",
+       "      <td>5.02</td>\n",
+       "      <td>357.52</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.19</td>\n",
+       "      <td>22.56</td>\n",
+       "      <td>0.06</td>\n",
+       "      <td>0.06</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1980-01-05</th>\n",
+       "      <td>1980-01-05</td>\n",
+       "      <td>207.19</td>\n",
+       "      <td>58.00</td>\n",
+       "      <td>-135.50</td>\n",
+       "      <td>200.70</td>\n",
+       "      <td>-24.81</td>\n",
+       "      <td>10.29</td>\n",
+       "      <td>343.00</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>85.94</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.73</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2019-12-27</th>\n",
+       "      <td>2019-12-27</td>\n",
+       "      <td>181.51</td>\n",
+       "      <td>58.00</td>\n",
+       "      <td>-135.50</td>\n",
+       "      <td>83.21</td>\n",
+       "      <td>173.45</td>\n",
+       "      <td>13.28</td>\n",
+       "      <td>236.71</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1.05</td>\n",
+       "      <td>168.98</td>\n",
+       "      <td>0.20</td>\n",
+       "      <td>0.67</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2019-12-28</th>\n",
+       "      <td>2019-12-28</td>\n",
+       "      <td>519.33</td>\n",
+       "      <td>58.00</td>\n",
+       "      <td>-135.50</td>\n",
+       "      <td>173.25</td>\n",
+       "      <td>518.97</td>\n",
+       "      <td>18.17</td>\n",
+       "      <td>222.99</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>15.38</td>\n",
+       "      <td>127.32</td>\n",
+       "      <td>0.87</td>\n",
+       "      <td>0.98</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2019-12-29</th>\n",
+       "      <td>2019-12-29</td>\n",
+       "      <td>118.21</td>\n",
+       "      <td>58.00</td>\n",
+       "      <td>-135.50</td>\n",
+       "      <td>43.04</td>\n",
+       "      <td>117.63</td>\n",
+       "      <td>10.76</td>\n",
+       "      <td>208.40</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>112.85</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.47</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2019-12-30</th>\n",
+       "      <td>2019-12-30</td>\n",
+       "      <td>228.34</td>\n",
+       "      <td>58.00</td>\n",
+       "      <td>-135.50</td>\n",
+       "      <td>87.13</td>\n",
+       "      <td>222.45</td>\n",
+       "      <td>14.52</td>\n",
+       "      <td>215.56</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>12.17</td>\n",
+       "      <td>79.64</td>\n",
+       "      <td>0.81</td>\n",
+       "      <td>0.77</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2019-12-31</th>\n",
+       "      <td>2019-12-31</td>\n",
+       "      <td>164.72</td>\n",
+       "      <td>58.00</td>\n",
+       "      <td>-135.50</td>\n",
+       "      <td>134.20</td>\n",
+       "      <td>116.96</td>\n",
+       "      <td>14.29</td>\n",
+       "      <td>238.83</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>6.79</td>\n",
+       "      <td>187.20</td>\n",
+       "      <td>0.63</td>\n",
+       "      <td>0.63</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>14610 rows × 14 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                 time    IVT   lat     lon   uIVT   vIVT   IWV  ivtdir  AR  \\\n",
+       "time                                                                         \n",
+       "1980-01-01 1980-01-01 148.93 58.00 -135.50  29.62 148.30 11.56  211.02   0   \n",
+       "1980-01-02 1980-01-02 147.08 58.00 -135.50   6.58 146.94 11.51  186.81   0   \n",
+       "1980-01-03 1980-01-03 101.50 58.00 -135.50  26.70 101.25 10.91  257.80   0   \n",
+       "1980-01-04 1980-01-04  29.98 58.00 -135.50  21.53   3.76  5.02  357.52   0   \n",
+       "1980-01-05 1980-01-05 207.19 58.00 -135.50 200.70 -24.81 10.29  343.00   1   \n",
+       "...               ...    ...   ...     ...    ...    ...   ...     ...  ..   \n",
+       "2019-12-27 2019-12-27 181.51 58.00 -135.50  83.21 173.45 13.28  236.71   0   \n",
+       "2019-12-28 2019-12-28 519.33 58.00 -135.50 173.25 518.97 18.17  222.99   0   \n",
+       "2019-12-29 2019-12-29 118.21 58.00 -135.50  43.04 117.63 10.76  208.40   0   \n",
+       "2019-12-30 2019-12-30 228.34 58.00 -135.50  87.13 222.45 14.52  215.56   0   \n",
+       "2019-12-31 2019-12-31 164.72 58.00 -135.50 134.20 116.96 14.29  238.83   0   \n",
+       "\n",
+       "            impact  prec  UVdir  prec_Hoonah  ivt_Hoonah  \n",
+       "time                                                      \n",
+       "1980-01-01       0  6.35  16.50         0.61        0.58  \n",
+       "1980-01-02       0 10.58  65.70         0.77        0.57  \n",
+       "1980-01-03       0 20.42  53.43         0.93        0.40  \n",
+       "1980-01-04       0  0.19  22.56         0.06        0.06  \n",
+       "1980-01-05       0   NaN  85.94          NaN        0.73  \n",
+       "...            ...   ...    ...          ...         ...  \n",
+       "2019-12-27       1  1.05 168.98         0.20        0.67  \n",
+       "2019-12-28       0 15.38 127.32         0.87        0.98  \n",
+       "2019-12-29       0   NaN 112.85          NaN        0.47  \n",
+       "2019-12-30       0 12.17  79.64         0.81        0.77  \n",
+       "2019-12-31       0  6.79 187.20         0.63        0.63  \n",
+       "\n",
+       "[14610 rows x 14 columns]"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_lst[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "id": "f79aaf0b-c730-4ca8-be0f-91e0fa8e6b3f",
    "metadata": {},
    "outputs": [
