add non-technical report

--- a/analysis/fig5_windrose_elevation-overlay.ipynb
+++ b/analysis/fig5_windrose_elevation-overlay.ipynb
@@ -68,11 +68,7 @@
    "outputs": [],
    "source": [
     "# Set up paths\n",
-    "server = \"skyriver\"\n",
-    "if server == \"comet\":\n",
-    "    path_to_data = '/cw3e/mead/projects/cwp140/scratch/dnash/data/'      # project data -- read only\n",
-    "elif server == \"skyriver\":\n",
-    "    path_to_data = '/work/dnash/data/'\n",
+    "path_to_data = '/data/projects/Comet/cwp140/'\n",
     "path_to_out  = '../out/'       # output files (numerical results, intermediate datafiles) -- read & write\n",
     "path_to_figs = '../figs/'      # figures"
    ]
