--- a/analysis/fig4_ivt_composites_plot-only.ipynb
+++ b/analysis/fig4_ivt_composites_plot-only.ipynb
@@ -57,12 +57,7 @@
    "outputs": [],
    "source": [
     "# Set up paths\n",
-    "server = \"skyriver\"\n",
-    "if server == \"comet\":\n",
-    "    path_to_data = '/cw3e/mead/projects/cwp140/scratch/dnash/data/'      # project data -- read only\n",
-    "elif server == \"skyriver\":\n",
-    "    path_to_data = '/home/dnash/comet_data/'\n",
-    "\n",
+    "path_to_data = '/data/projects/Comet/cwp140/'\n",
     "path_to_out  = '../out/'       # output files (numerical results, intermediate datafiles) -- read & write\n",
     "path_to_figs = '../figs/'      # figures"
    ]
